@@ -1,7 +1,15 @@
 package es.princip.getp.global.config;
 
 import static org.springframework.security.config.Customizer.withDefaults;
+
+import es.princip.getp.domain.member.service.MemberService;
+import es.princip.getp.global.security.exception.handler.CustomAccessDeniedHandler;
+import es.princip.getp.global.security.exception.handler.CustomAuthenticationEntryPoint;
+import es.princip.getp.global.security.filter.JwtAuthorizationFilter;
+import es.princip.getp.global.security.provider.JwtTokenProvider;
 import java.util.Arrays;
+import java.util.List;
+import lombok.RequiredArgsConstructor;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.http.HttpMethod;
@@ -20,16 +28,13 @@ import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 import org.springframework.web.servlet.handler.HandlerMappingIntrospector;
-import es.princip.getp.domain.member.service.MemberService;
-import es.princip.getp.global.security.filter.JwtAuthorizationFilter;
-import es.princip.getp.global.security.provider.JwtTokenProvider;
-import lombok.RequiredArgsConstructor;
 
 @Configuration
 @EnableWebSecurity
 @EnableMethodSecurity
 @RequiredArgsConstructor
 public class SecurityConfig {
+
     private final JwtTokenProvider jwtTokenProvider;
     private final MemberService memberService;
 
@@ -40,19 +45,26 @@ public class SecurityConfig {
 
     @Bean
     public SecurityFilterChain securityFilterChain(
-            HttpSecurity httpSecurity,
-            HandlerMappingIntrospector introspection
+        HttpSecurity httpSecurity,
+        HandlerMappingIntrospector introspection
     ) throws Exception {
         httpSecurity
-                .cors(Customizer.withDefaults())
-                .csrf(AbstractHttpConfigurer::disable)
-                .sessionManagement(session -> session.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
-                .formLogin(AbstractHttpConfigurer::disable);
+            .cors(Customizer.withDefaults())
+            .csrf(AbstractHttpConfigurer::disable)
+            .sessionManagement(
+                session -> session.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
+            .formLogin(AbstractHttpConfigurer::disable);
 
         httpSecurity
-                .authorizeHttpRequests(request -> request.requestMatchers(new AntPathRequestMatcher("/**")).permitAll())
-                .addFilterBefore(new JwtAuthorizationFilter(memberService, jwtTokenProvider), UsernamePasswordAuthenticationFilter.class)
-                .httpBasic(withDefaults());
+            .authorizeHttpRequests(
+                request -> request.requestMatchers(new AntPathRequestMatcher("/**")).permitAll())
+            .addFilterBefore(new JwtAuthorizationFilter(memberService, jwtTokenProvider),
+                UsernamePasswordAuthenticationFilter.class)
+            .httpBasic(withDefaults());
+
+        httpSecurity.exceptionHandling(authenticationManager -> authenticationManager
+            .authenticationEntryPoint(new CustomAuthenticationEntryPoint())
+            .accessDeniedHandler(new CustomAccessDeniedHandler()));
 
         return httpSecurity.build();
     }
@@ -61,18 +73,18 @@ public class SecurityConfig {
     CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
         configuration.setAllowedOrigins(Arrays.asList(
-                "https://h.princip.es", // 개발
-                "https://he.princip.es" // 배포
+            "https://h.princip.es", // 개발
+            "https://he.princip.es" // 배포
         ));
         configuration.setAllowedMethods(Arrays.asList(
-                HttpMethod.GET.name(),
-                HttpMethod.POST.name(),
-                HttpMethod.PATCH.name(),
-                HttpMethod.PUT.name(),
-                HttpMethod.DELETE.name()
+            HttpMethod.GET.name(),
+            HttpMethod.POST.name(),
+            HttpMethod.PATCH.name(),
+            HttpMethod.PUT.name(),
+            HttpMethod.DELETE.name()
         ));
         configuration.setAllowCredentials(true);
-        configuration.setAllowedHeaders(Arrays.asList("*"));
+        configuration.setAllowedHeaders(List.of("*"));
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         source.registerCorsConfiguration("/**", configuration);
         return source;
